# SnAPI.GameFramework

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml
benchmarks/: node_component_tick_baseline_10.txt  node_component_tick_baseline_1k.txt  node_component_tick_baseline_200k.txt  node_component_tick_baseline_50k.txt  node_component_tick_compare_1k_after_input_bridge_ecs_bridge.txt  node_component_tick_compare_1k_after_input_bridge_legacy.txt  node_component_tick_compare_1k_ecs_bridge.txt  node_component_tick_compare_1k_legacy.txt  node_component_tick_compare_smoke_ecs_bridge.txt  node_component_tick_compare_smoke_legacy.txt  node_component_tick_ecs.txt  node_component_tick_ecs_release_warm.txt  node_component_tick_ecs_release_warm_10k.txt  node_component_tick_ecs_release_warm_10k_rerun.txt  node_component_tick_ecs_release_warm_1k.txt  node_component_tick_ecs_smoke.txt  node_component_tick_ecs_warm.txt
cmake/modules/: Findlz4.cmake
docs/: 404.html  Doxyfile.in  index.html  sitemap.xml
docs-src/: architecture.md  index.md  tutorials.md
docs-src/api/: Assert_8h.md  AssetPipelineFactories_8cpp.md  AssetPipelineFactories_8h.md  AssetPipelineIds_8h.md  AssetPipelinePlugin_8cpp.md  AssetPipelineSerializers_8cpp.md  AssetPipelineSerializers_8h.md  AudioListenerComponent_8cpp.md  AudioListenerComponent_8h.md  AudioSourceComponent_8cpp.md  AudioSourceComponent_8h.md  AudioSystem_8cpp.md  AudioSystem_8h.md  BaseNode_8cpp.md  BaseNode_8h.md  BuiltinTypes_8h.md  CameraComponent_8cpp.md  CameraComponent_8h.md  CharacterMovementController_8cpp.md  CharacterMovementController_8h.md  ColliderComponent_8cpp.md  ColliderComponent_8h.md  CollisionFilters_8h.md  ComponentStorage_8h.md  Expected_8h.md  Export_8h.md  FeatureShowcase_2main_8cpp.md  Flags_8h.md  GameFramework_8cpp.md  GameFramework_8hpp.md  GameRuntime_8cpp.md  GameRuntime_8h.md  HandleFwd_8h.md  Handle_8h.md  Handles_8h.md  IComponent_8cpp.md  IComponent_8h.md  ILevel_8h.md  INode_8cpp.md  INode_8h.md  (+160 more)
docs-src/tutorials/: assetpipeline.md  audio.md  input.md  networking.md  nodes_components.md  physics.md  physics_queries_events.md  reflection_serialization.md  renderer.md  testing.md  ui.md  worlds_graphs.md
docs/api/: index.html
docs/api/Assert_8h/: index.html
docs/api/AssetPipelineFactories_8cpp/: index.html
docs/api/AssetPipelineFactories_8h/: index.html
docs/api/AssetPipelineIds_8h/: index.html
docs/api/AssetPipelinePlugin_8cpp/: index.html
docs/api/AssetPipelineSerializers_8cpp/: index.html
docs/api/AssetPipelineSerializers_8h/: index.html
docs/api/AudioListenerComponent_8cpp/: index.html
docs/api/AudioListenerComponent_8h/: index.html
docs/api/AudioSourceComponent_8cpp/: index.html
docs/api/AudioSourceComponent_8h/: index.html
docs/api/AudioSystem_8cpp/: index.html
docs/api/AudioSystem_8h/: index.html
docs/api/BaseNode_8cpp/: index.html
docs/api/BaseNode_8h/: index.html
docs/api/BuiltinTypes_8h/: index.html
docs/api/CameraComponent_8cpp/: index.html
docs/api/CameraComponent_8h/: index.html
docs/api/CharacterMovementController_8cpp/: index.html
docs/api/CharacterMovementController_8h/: index.html
docs/api/Math_8h/: index.html
docs/architecture/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
docs/tutorials/: index.html
examples/: CMakeLists.txt
examples/FeatureShowcase/: CMakeLists.txt  main.cpp
examples/MultiplayerExample/: CMakeLists.txt  main.cpp
examples/NodeComponentTickBenchmark/: CMakeLists.txt  main.cpp
examples/WorldPerfBenchmark/: CMakeLists.txt  main.cpp
include/: Assert.h  AssetPipelineFactories.h  AssetPipelineIds.h  AssetPipelineSerializers.h  AssetRef.h  AudioListenerComponent.h  AudioSourceComponent.h  AudioSystem.h  BaseComponent.h  BaseNode.h  BaseNode.inl  BuiltinTypes.h  CameraComponent.h  CharacterMovementController.h  ColliderComponent.h  CollisionFilters.h  ComponentStorage.h  DirectionalLightComponent.h  Expected.h  Export.h  Flags.h  FollowTargetComponent.h  GameFramework.hpp  GameRuntime.h  GameThreading.h  GameplayHost.h  GameplayRpcGateway.h  Handle.h  HandleFwd.h  Handles.h  IComponent.h  IGame.h  IGameMode.h  IGameService.h  ILevel.h  INode.h  IWorld.h  InputComponent.h  InputIntentComponent.h  InputSystem.h  (+47 more)
include/Editor/: EditorAssetService.h  EditorCameraComponent.h  EditorCoreServices.h  EditorExport.h  EditorLayout.h  EditorSceneBootstrap.h  EditorSelectionModel.h  EditorTheme.h  EditorViewportBinding.h  EditorWorld.h  GameEditor.h  GameFrameworkEditor.hpp  IEditorService.h
src/: AssetPipelineFactories.cpp  AssetPipelinePlugin.cpp  AssetPipelineSerializers.cpp  AssetRef.cpp  AudioListenerComponent.cpp  AudioSourceComponent.cpp  AudioSystem.cpp  BaseComponent.cpp  BaseNode.cpp  CameraComponent.cpp  CharacterMovementController.cpp  ColliderComponent.cpp  DirectionalLightComponent.cpp  FollowTargetComponent.cpp  GameFramework.cpp  GameRuntime.cpp  GameplayHost.cpp  GameplayRpcGateway.cpp  IComponent.cpp  INode.cpp  InputComponent.cpp  InputIntentComponent.cpp  InputSystem.cpp  Level.cpp  LocalPlayer.cpp  LocalPlayerService.cpp  MultiplayerConfigNode.cpp  NetReplication.cpp  NetRpc.cpp  NetworkSystem.cpp  NodeGraph.cpp  PawnBase.cpp  PhysicsSystem.cpp  PlayerStart.cpp  RendererSystem.cpp  RigidBodyComponent.cpp  ScriptABI.cpp  Serialization.cpp  SkeletalMeshComponent.cpp  SprintArmComponent.cpp  (+8 more)
src/Editor/: EditorAssetService.cpp  EditorCameraComponent.cpp  EditorCoreServices.cpp  EditorLayout.cpp  EditorSceneBootstrap.cpp  EditorSelectionModel.cpp  EditorTheme.cpp  EditorTypeRegistration.cpp  EditorViewportBinding.cpp  EditorWorld.cpp  GameEditor.cpp  main.cpp
tests/: CMakeLists.txt  ComponentStorageFallbackTests.cpp  EcsOnlyWorldTests.cpp  GameRuntimeTests.cpp  GameThreadingTests.cpp  GameplayHostTests.cpp  HandleTests.cpp  InputSystemTests.cpp  LevelWorldSerializationTests.cpp  NetReplicationTests.cpp  NodeGraphTests.cpp  PhysicsIntegrationTests.cpp  ReflectionTests.cpp  RelevanceTests.cpp  SerializationTests.cpp  WorldEcsRuntimeTests.cpp  WorldNetworkingTests.cpp
tools/: GenerateMkDocsApi.py
(+188 files in other folders)
